--- a/src/App.css
+++ b/src/App.css
@@ -13,3 +13,12 @@ body {
   );
   text-align: center;
 }
+
+.app-title{
+  margin-top: 35px;
+  margin-bottom: 15px;
+  font-size: 85px;
+  font-weight: bold;
+  color: #0ccac4;
+  font-family: 'Bigelow Rules';
+}
